# FFmpegPlay

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mik/ffmpegplay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpegMusic.cpp  FFmpegMusic.h  native-lib.cpp
app/src/main/java/com/mik/ffmpegplay/: AudioPlayer.java  MainActivity.java  MikPlayer.java  VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mik/ffmpegplay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
